# nimrodel

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
PyAPI/: __init__.py  _graphical.py  _main.py  decorators.py
PyAPI/res/: apiexplorer.pyhp
nimrodel/: __init__.py  _api.py  _apifunction.py  _apiobject.py  _apirest.py  _main.py  _misc.py
nimrodel/output/: json.py  xml.py
nimrodel/res/: apiexplorer.jinja  apiexplorer.pyhp  apiexplorer_endpoint.jinja  apiexplorer_endpoint.pyhp  apiexplorer_object.jinja  apiexplorer_object.pyhp  apiexplorer_rest.jinja  apiexplorer_rest.pyhp
